alx-project-0x04/.next/dev/logs/next-development.log
[00:00:01.353] Server  LOG     ✓ Ready in 901ms
[00:00:14.729] Server  LOG     ○ Compiling / ...
[00:00:17.633] Browser WARN    Image with src "http://localhost:3000/vercel.svg" has either width or height modified, but not the other. If you use CSS to change the size of your image, also include the styles 'width: "auto"' or 'height: "auto"' to maintain the aspect ratio.
[00:01:06.794] Server  LOG     ✓ Compiled in 202ms
[00:01:29.860] Server  LOG     ✓ Compiled in 680ms
[00:02:31.294] Server  LOG     ✓ Compiled in 100ms
[00:03:59.839] Server  LOG     ✓ Compiled in 71ms
[00:05:56.090] Server  LOG     ✓ Compiled in 90ms
[00:05:56.418] Browser ERROR   ./alx-project-0x03-setup/alx-project-0x03/styles/globals.css
Error evaluating Node.js code
CssSyntaxError: /home/maurice/FS-Stuff/NextJS/alx-project-0x03-setup/alx-project-0x03/styles/globals.css:6:1: Unknown word bo
    [at Input.error (turbopack:///[project]/alx-project-0x03-setup/alx-project-0x03/node_modules/postcss/lib/input.js:135:16)]
    [at Parser.unknownWord (turbopack:///[project]/alx-project-0x03-setup/alx-project-0x03/node_modules/postcss/lib/parser.js:595:22)]
    [at Parser.other (turbopack:///[project]/alx-project-0x03-setup/alx-project-0x03/node_modules/postcss/lib/parser.js:437:12)]
    [at Parser.parse (turbopack:///[project]/alx-project-0x03-setup/alx-project-0x03/node_modules/postcss/lib/parser.js:472:16)]
    [at parse (turbopack:///[project]/alx-project-0x03-setup/alx-project-0x03/node_modules/postcss/lib/parse.js:11:12)]
    [at new LazyResult (turbopack:///[project]/alx-project-0x03-setup/alx-project-0x03/node_modules/postcss/lib/lazy-result.js:165:16)]
    [at Processor.process (turbopack:///[project]/alx-project-0x03-setup/alx-project-0x03/node_modules/postcss/lib/processor.js:53:14)]
    [at transform (turbopack:///[turbopack-node]/transforms/postcss.ts:70:51)]
    [at run (turbopack:///[turbopack-node]/ipc/evaluate.ts:92:29)]
    [at run (turbopack:///[turbopack-node]/ipc/evaluate.ts:115:11)]

Import trace:
  Browser:
    ./alx-project-0x03-setup/alx-project-0x03/styles/globals.css
    ./alx-project-0x03-setup/alx-project-0x03/pages/_app.tsx
[00:06:22.695] Server  LOG     ✓ Compiled in 1219ms
[00:07:34.234] Server  LOG     ✓ Compiled in 95ms
[00:08:17.018] Server  LOG     ✓ Compiled in 96ms
[00:08:24.880] Server  LOG     ✓ Compiled in 82ms
[00:08:33.566] Server  LOG     ✓ Compiled in 72ms
[00:09:23.522] Server  LOG     ✓ Compiled in 79ms
[00:10:25.090] Server  LOG     ✓ Compiled in 75ms
[00:10:42.821] Server  LOG     ✓ Compiled in 65ms
[00:14:04.753] Server  LOG     ✓ Compiled in 165ms
[00:14:22.674] Server  LOG     ✓ Compiled in 123ms
[00:15:31.685] Server  LOG     ✓ Compiled in 106ms
[00:15:40.607] Server  LOG     ✓ Compiled in 72ms
[00:15:50.644] Server  LOG     ✓ Compiled in 48ms
[00:16:45.494] Server  LOG     ✓ Compiled in 49ms
[00:16:50.301] Server  LOG     ✓ Compiled in 55ms
[00:16:56.861] Server  LOG     ✓ Compiled in 142ms
[00:17:55.086] Server  LOG     ✓ Compiled in 154ms
[00:18:16.910] Server  LOG     ✓ Compiled in 86ms
[00:18:24.897] Server  LOG     ✓ Compiled in 60ms
[00:19:51.586] Server  LOG     ✓ Compiled in 69ms
[00:22:06.324] Server  WARN    ⚠ Fast Refresh had to perform a full reload when ./alx-project-0x03-setup/alx-project-0x03/pages/index.tsx changed. Read more: https://nextjs.org/docs/messages/fast-refresh-reload
[00:22:06.345] Server  LOG     ✓ Compiled in 41ms
[00:22:06.714] Server  ERROR   ⨯ Error: The default export is not a React Component in page: "/"
[00:22:06.793] Server  ERROR   ⨯ Error: The default export is not a React Component in page: "/"
[00:22:07.516] Browser ERROR   uncaughtError: Error: The default export is not a React Component in page: "/"
[00:22:17.158] Server  WARN    ⚠ Fast Refresh had to perform a full reload due to a runtime error.
[00:22:17.163] Server  WARN    ⚠ Fast Refresh had to perform a full reload due to a runtime error.
[00:22:17.318] Server  LOG     ✓ Compiled in 45ms
[00:22:17.817] Browser ERROR   uncaughtError: Error: ./alx-project-0x03-setup/alx-project-0x03/pages/index.tsx:6:1
Parsing ecmascript source code failed
  4 |     <h1> Welcome to Splash App </h1>
  5 |    </div>
> 6 | }
    | ^
  7 |
  8 | export default Home;

Expected ',', got '}'


[00:22:18.004] Browser ERROR   ./alx-project-0x03-setup/alx-project-0x03/pages/index.tsx:6:1
Parsing ecmascript source code failed
  4 |     <h1> Welcome to Splash App </h1>
  5 |    </div>
> 6 | }
    | ^
  7 |
  8 | export default Home;

Expected ',', got '}'
[00:22:18.004] Browser ERROR   ./alx-project-0x03-setup/alx-project-0x03/pages/index.tsx:6:1
Parsing ecmascript source code failed
  4 |     <h1> Welcome to Splash App </h1>
  5 |    </div>
> 6 | }
    | ^
  7 |
  8 | export default Home;

Expected ',', got '}'
[00:23:16.286] Server  WARN    ⚠ Fast Refresh had to perform a full reload due to a runtime error.
[00:23:16.349] Server  WARN    ⚠ Fast Refresh had to perform a full reload due to a runtime error.
[00:24:45.181] Server  LOG     ✓ Compiled in 357ms
[00:25:51.141] Server  ERROR   PageNotFoundError: Cannot find module for page: /generate-text-ai
[00:25:55.903] Server  ERROR   PageNotFoundError: Cannot find module for page: /text-to-image
[00:29:21.765] Server  LOG     ✓ Compiled in 101ms
[00:30:05.910] Server  LOG     ✓ Compiled in 230ms
[00:30:53.136] Server  LOG     ✓ Compiled in 86ms
[00:32:02.099] Server  LOG     ✓ Compiled in 164ms
[00:34:55.779] Server  LOG     ✓ Compiled in 260ms
[00:36:32.532] Server  LOG     ✓ Compiled in 51ms
[00:36:57.653] Server  ERROR   PageNotFoundError: Cannot find module for page: /generate-text-ai
[00:38:23.968] Server  LOG     ✓ Compiled in 69ms
